--- a/client_src_utils_ssotToBpmnParsing_ssotToBpmnParsing.js.html
+++ b/client_src_utils_ssotToBpmnParsing_ssotToBpmnParsing.js.html
@@ -7,7 +7,7 @@
   
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> client/src/components/pages/RobotFile/RobotFile.jsx</title>
+  <title> client/src/utils/ssotToBpmnParsing/ssotToBpmnParsing.js</title>
 
   <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -76,7 +76,7 @@
             <div class="content">
                 <header class="page-title">
                     <p>Source</p>
-                    <h1>client/src/components/pages/RobotFile/RobotFile.jsx</h1>
+                    <h1>client/src/utils/ssotToBpmnParsing/ssotToBpmnParsing.js</h1>
                 </header>
                 
 
@@ -85,88 +85,125 @@
     
     <section>
         <article>
-            <pre class="prettyprint source linenums"><code>import React, { useState, useEffect } from 'react';
-import { Layout, Button, Space, Row, Col } from 'antd';
-import Editor from 'react-simple-code-editor';
-import { highlight, languages } from 'prismjs/components/prism-core';
-import HeaderNavbar from '../../content/HeaderNavbar/HeaderNavbar';
-import 'prismjs/components/prism-robotframework';
-import getParsedRobotFile from '../../../api/ssot';
-import 'prismjs/themes/prism.css';
-import styles from './RobotFile.module.css';
+            <pre class="prettyprint source linenums"><code>/**
+ * @category Client
+ * @module
+ */
+
+const DEFAULT_STARTER = 'Event_13c1i8b';
+const DEFAULT_PARENT = 'Participant_0cyhvx8';
+const DEFAULT_SPACING = '150,0';
+const DEFAULT_STARTEVENT_POSITION = '200,330';
 
 /**
- * @description View of the robot file
- * @category Client
- * @component
+ * @description Will search through the ssot and return the only element without a predecessor
+ * @param {Object} ssot The ssot to process
  */
-const RobotFile = () => {
-  const [code, setCode] = useState(
-    'Please wait, your robot file is being loaded.'
-  );
+const findStartElement = (ssot) => (
+    ssot.elements.find((element) => (element.type === 'MARKER' &amp;&amp; element.predecessorIds.length &lt; 1)
+    ));
 
-  /**
-   * @description Equivalent to ComponentDidMount in class based components
-   */
-  useEffect(() => {
-    const robotId = JSON.parse(sessionStorage.getItem('robotId'));
-    getParsedRobotFile(robotId)
-      .then((response) => response.text())
-      .then((robotCode) => {
-        setCode(robotCode);
-      });
-  }, []);
-
-  /**
-   * @description Gets called when the the button is pressed to save to the cloud.
-   * This function will retrieve the code from the editor, parse it to a ssot and write the
-   * resulting ssot into the sessionStorage.
-   */
-  const onSaveToCloud = async () => {
-    // eslint-disable-next-line no-unused-vars
-    const robotId = JSON.parse(sessionStorage.getItem('robotId'));
-
-    /**
-     * please parse here to ssot and upsert
-     * use the variables robotId and code for parsing.
-     */
-  };
-
-  return (
-    &lt;Layout>
-      &lt;HeaderNavbar selectedKey={3} />
-      &lt;Row justify='center' width='100%'>
-        &lt;Col xs={24} sm={24} md={20}>
-          &lt;Space
-            direction='vertical'
-            size='middle'
-            style={{ padding: '1rem', width: '100%' }}
-          >
-            &lt;Button
-              type='primary'
-              onClick={onSaveToCloud}
-              style={{ width: '100%' }}
-            >
-              Save changes to cloud
-            &lt;/Button>
-            &lt;Editor
-              value={code}
-              onValueChange={(newCode) => setCode(newCode)}
-              highlight={(highlightCode) =>
-                highlight(highlightCode, languages.robotframework)
-              }
-              padding='1rem'
-              className={styles.editor}
-              tabsize={4}
-            />
-          &lt;/Space>
-        &lt;/Col>
-      &lt;/Row>
-    &lt;/Layout>
-  );
+/**
+ * @description Will create an order within the elements based on their positioning in the flow
+ * @param {Object} ssot The ssot to process
+ * @returns {Array} The elements of the ssot in the correct order in which they appear in the flow
+ */
+const buildCorrectOrder = (ssot) => {
+    const startElement = findStartElement(ssot);
+    const elementsInOrder = [startElement];
+    let currentElement = startElement;
+    for (let i = 1; i &lt; ssot.elements.length; i += 1) {
+        currentElement = ssot.elements.find((element) => (element.id === currentElement.successorIds[0]));
+        elementsInOrder.push(currentElement);
+    }
+    return elementsInOrder;
 };
 
-export default RobotFile;
+/**
+ * @description The bpmn js cli extension will just create elements, but not ensure their Id to match the one in the ssot.
+ * Because of that this workaround is needed, which takes in the created element and updates its id to the one saved in the ssot
+ * @param {*} modeling The modeling extension
+ * @param {Object} element The first element (start element) to process
+ * @returns {String} The now set id of the shape
+ */
+const updateIdForElement = (modeling, cli, element, cliResult) => {
+    const bpmnObject = cli.element(cliResult);
+    const newId = element.id;
+
+    const updatedIdProperty = { id: newId }
+    modeling.updateProperties(bpmnObject, updatedIdProperty);
+    return newId;
+};
+
+/**
+ * @description Will create the first element in the BPMN diagram as a start event
+ * @param {*} cli The modeling cli extension
+ * @param {*} modeling The modeling extension
+ * @param {Object} element The first element (start element) to process
+ * @param {String} previousElement The id of the previous element
+ * @returns {String} The id of the element created in the diagram
+ */
+const drawElement = (cli, modeling, element, previousElement) => {
+    let createdElement;
+    switch (element.type) {
+        case 'INSTRUCTION':
+            createdElement = cli.append(previousElement, 'bpmn:Task', DEFAULT_SPACING);
+            break;
+        case 'MARKER':
+            // currently this is can only be an end event; in the future ther eshould be another switch here
+            createdElement = cli.append(previousElement, 'bpmn:EndEvent', DEFAULT_SPACING);
+            break;
+        default:
+            break;
+    }
+
+    const newId = updateIdForElement(modeling, cli, element, createdElement);
+    if (element.name) cli.setLabel(newId, element.name);
+    return newId;
+};
+
+/**
+ * @description Will check if the default start event is still present and will remove if so
+ * @param {*} cli The modeling cli extension
+ */
+const removeDefaultStarter = (cli) => {
+    if (cli.elements().includes(DEFAULT_STARTER)) cli.removeShape(DEFAULT_STARTER);
+};
+
+/**
+ * @description Will create the first element in the BPMN diagram as a start event
+ * @param {*} cli The modeling cli extension
+ * @param {*} modeling The modeling extension
+ * @param {Object} element The first element (start element) to process
+ * @returns {String} The id of the element created in the diagram
+ */
+const drawStartElement = (cli, modeling, element) => {
+    removeDefaultStarter(cli);
+    const startElement = cli.create('bpmn:StartEvent', DEFAULT_STARTEVENT_POSITION, DEFAULT_PARENT);
+    const newId = updateIdForElement(modeling, cli, element, startElement);
+
+    if (element.name) cli.setLabel(newId, element.name);
+    return newId;
+};
+
+/**
+ * @description Will create the BPMN XML from the provided ssot, as well as displaying the diagram on the modeling component
+ * @param {*} modeler The bpmn modeler
+ * @param {Object} ssot The ssot to parse
+ * @returns {String} The parsed XML BPMN diagram as a String
+ */
+const parseSsotToBpmn = (modeler, ssot) => {
+    const sortedElements = buildCorrectOrder(ssot);
+    const cli = modeler.get('cli');
+    const modeling = modeler.get('modeling');
+
+    let lastDrawnElement = drawStartElement(cli, modeling, sortedElements.shift());
+    sortedElements.forEach((elementToDraw) => {
+        lastDrawnElement = drawElement(cli, modeling, elementToDraw, lastDrawnElement);
+    });
+};
+
+export default parseSsotToBpmn;
 </code></pre>
         </article>
     </section>
