--- a/client_src_api_variableRetrieval.js.html
+++ b/client_src_api_variableRetrieval.js.html
@@ -7,7 +7,7 @@
   
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> client/src/components/pages/RobotFile/RobotFile.jsx</title>
+  <title> client/src/api/variableRetrieval.js</title>
 
   <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -76,7 +76,7 @@
             <div class="content">
                 <header class="page-title">
                     <p>Source</p>
-                    <h1>client/src/components/pages/RobotFile/RobotFile.jsx</h1>
+                    <h1>client/src/api/variableRetrieval.js</h1>
                 </header>
                 
 
@@ -85,88 +85,76 @@
     
     <section>
         <article>
-            <pre class="prettyprint source linenums"><code>import React, { useState, useEffect } from 'react';
-import { Layout, Button, Space, Row, Col } from 'antd';
-import Editor from 'react-simple-code-editor';
-import { highlight, languages } from 'prismjs/components/prism-core';
-import HeaderNavbar from '../../content/HeaderNavbar/HeaderNavbar';
-import 'prismjs/components/prism-robotframework';
-import getParsedRobotFile from '../../../api/ssot';
-import 'prismjs/themes/prism.css';
-import styles from './RobotFile.module.css';
+            <pre class="prettyprint source linenums"><code>/**
+ * @category Client
+ * @module
+ */
 
 /**
- * @description View of the robot file
- * @category Client
- * @component
- */
-const RobotFile = () => {
-  const [code, setCode] = useState(
-    'Please wait, your robot file is being loaded.'
-  );
+* @description Will retrieve the needed variables for a new application/task tuple and return that, as well as updating the ssot with those new variables
+* @param {String} robotId - String including the Id of the robot
+* @param {String} activityId - String including the Id of the activity
+* @param {String} application - String including the application
+* @param {String} task - String including the task
+*/
+const variablesForNewTask = async (
+  robotId,
+  activityId,
+  application,
+  task
+) => {
+  const applicationWithoutEmptySpaces = application.replace(/\s/g, '+');
+  const taskWithoutEmptySpaces = task.replace(/\s/g, '+');
+  const requestString = `/ssot/getVariablesForNewTask/?botId=${robotId}&amp;activityId=${activityId}&amp;application=${applicationWithoutEmptySpaces}&amp;task=${taskWithoutEmptySpaces}`;
 
-  /**
-   * @description Equivalent to ComponentDidMount in class based components
-   */
-  useEffect(() => {
-    const robotId = JSON.parse(sessionStorage.getItem('robotId'));
-    getParsedRobotFile(robotId)
-      .then((response) => response.text())
-      .then((robotCode) => {
-        setCode(robotCode);
-      });
-  }, []);
-
-  /**
-   * @description Gets called when the the button is pressed to save to the cloud.
-   * This function will retrieve the code from the editor, parse it to a ssot and write the
-   * resulting ssot into the sessionStorage.
-   */
-  const onSaveToCloud = async () => {
-    // eslint-disable-next-line no-unused-vars
-    const robotId = JSON.parse(sessionStorage.getItem('robotId'));
-
-    /**
-     * please parse here to ssot and upsert
-     * use the variables robotId and code for parsing.
-     */
-  };
-
-  return (
-    &lt;Layout>
-      &lt;HeaderNavbar selectedKey={3} />
-      &lt;Row justify='center' width='100%'>
-        &lt;Col xs={24} sm={24} md={20}>
-          &lt;Space
-            direction='vertical'
-            size='middle'
-            style={{ padding: '1rem', width: '100%' }}
-          >
-            &lt;Button
-              type='primary'
-              onClick={onSaveToCloud}
-              style={{ width: '100%' }}
-            >
-              Save changes to cloud
-            &lt;/Button>
-            &lt;Editor
-              value={code}
-              onValueChange={(newCode) => setCode(newCode)}
-              highlight={(highlightCode) =>
-                highlight(highlightCode, languages.robotframework)
-              }
-              padding='1rem'
-              className={styles.editor}
-              tabsize={4}
-            />
-          &lt;/Space>
-        &lt;/Col>
-      &lt;/Row>
-    &lt;/Layout>
-  );
+  const response = await fetch(requestString);
+  return response;
 };
 
-export default RobotFile;
+/**
+ * @description Fetch all variables for an existing activity
+ * @param {String} robotId - String including the Id of the robot
+ * @param {String} activityId - String including the Id of the activity
+ */
+const checkRobotForExistingVariables = async (
+  robotId,
+  activityId) => {
+  const requestString = `/ssot/checkForExistingVariables/?botId=${robotId}&amp;activityId=${activityId}`;
+  const response = await fetch(requestString);
+  return response;
+};
+
+/**
+ * @description Will update the variables for the specified activity
+ * @param {String} robotId - String including the Id of the robbot
+ * @param {String} activityId - String including the Id of the activity
+ * @param {Array} newVariableList - Array of the variables which will be used to update the ssot
+ */
+const updateVariablesForRobot = async (
+  robotId,
+  activityId,
+  newVariableList,
+  outputVariableName) => {
+  const requestString = `/ssot/updateVariables/?botId=${robotId}&amp;activityId=${activityId}`;
+  const updateObject = {
+    parameters: newVariableList,
+    output: outputVariableName
+  };
+  const response = await fetch(requestString, {
+    body: JSON.stringify(updateObject),
+    method: 'POST',
+    headers: {
+      'Content-Type': 'application/json;charset=utf-8'
+    }
+  });
+  return response;
+};
+
+export {
+  variablesForNewTask,
+  checkRobotForExistingVariables,
+  updateVariablesForRobot
+};
 </code></pre>
         </article>
     </section>
