--- a/client_src_components_pages_RobotOverview_RobotOverview.jsx.html
+++ b/client_src_components_pages_RobotOverview_RobotOverview.jsx.html
@@ -7,7 +7,7 @@
   
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> client/src/components/pages/RobotFile/RobotFile.jsx</title>
+  <title> client/src/components/pages/RobotOverview/RobotOverview.jsx</title>
 
   <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -76,7 +76,7 @@
             <div class="content">
                 <header class="page-title">
                     <p>Source</p>
-                    <h1>client/src/components/pages/RobotFile/RobotFile.jsx</h1>
+                    <h1>client/src/components/pages/RobotOverview/RobotOverview.jsx</h1>
                 </header>
                 
 
@@ -86,87 +86,164 @@
     <section>
         <article>
             <pre class="prettyprint source linenums"><code>import React, { useState, useEffect } from 'react';
-import { Layout, Button, Space, Row, Col } from 'antd';
-import Editor from 'react-simple-code-editor';
-import { highlight, languages } from 'prismjs/components/prism-core';
+import { Layout, Input, Space, Row, Select } from 'antd';
 import HeaderNavbar from '../../content/HeaderNavbar/HeaderNavbar';
-import 'prismjs/components/prism-robotframework';
-import getParsedRobotFile from '../../../api/ssot';
-import 'prismjs/themes/prism.css';
-import styles from './RobotFile.module.css';
+import RobotContainer from '../../content/RobotContainer/RobotContainer';
+import socket from '../../../utils/socket/socketConnections';
+import CreateRobotContainer from '../../content/RobotContainer/CreateRobotContainer';
+import initSessionStorage from '../../../utils/sessionStorage';
+import { fetchSsotsForUser, createNewRobot } from '../../../api/ssotRetrieval';
+
+const { Search } = Input;
+const { Option } = Select;
 
 /**
- * @description View of the robot file
+ * @description Overview page, where all robots are displayed and can be opened.
  * @category Client
  * @component
  */
-const RobotFile = () => {
-  const [code, setCode] = useState(
-    'Please wait, your robot file is being loaded.'
-  );
+const RobotOverview = () => {
+  const [searchValue, setSearchValue] = useState('');
+  const [userId, setUserId] = useState('80625d115100a2ee8d8e695b');
+  const [robotList, setRobotList] = useState([]);
+
+  /**
+   * @description Fetches Bots for the specified user and will trigger a rerender so that it will be displayed
+   * @param {String} userIdToFetch The userId to fetch Bots for
+   */
+  const retrieveBotList = (userIdToFetch) => {
+    fetchSsotsForUser(userIdToFetch)
+      .then((response) => response.json())
+      .then((data) => {
+        setRobotList([]);
+        setRobotList([...data]);
+      })
+      .catch((error) => {
+        console.error(error);
+      });
+  };
 
   /**
    * @description Equivalent to ComponentDidMount in class based components
    */
   useEffect(() => {
-    const robotId = JSON.parse(sessionStorage.getItem('robotId'));
-    getParsedRobotFile(robotId)
-      .then((response) => response.text())
-      .then((robotCode) => {
-        setCode(robotCode);
-      });
+    socket.emit('joinUserRoom', userId);
+    socket.on('successUserRoomConnection', (message) => message);
+    socket.on('errorUserRoomConnection', (message) => message);
+    socket.on('newClientJoinedUserRoom', (message) => message);
+    initSessionStorage('CurrentUserId', '80625d115100a2ee8d8e695b');
+    retrieveBotList(userId);
   }, []);
 
   /**
-   * @description Gets called when the the button is pressed to save to the cloud.
-   * This function will retrieve the code from the editor, parse it to a ssot and write the
-   * resulting ssot into the sessionStorage.
+   * @description Updates the current user id in the session storage and sets the state variable userId to the new value
+   * @param {Integer} value the value of the number input field used for setting the user id
    */
-  const onSaveToCloud = async () => {
-    // eslint-disable-next-line no-unused-vars
-    const robotId = JSON.parse(sessionStorage.getItem('robotId'));
+  const changeUserId = (value) => {
+    sessionStorage.setItem('CurrentUserId', value);
+    retrieveBotList(value);
+    setUserId(value);
+  };
 
-    /**
-     * please parse here to ssot and upsert
-     * use the variables robotId and code for parsing.
-     */
+  /**
+   * @description Handles the update when a new searchValue was entered
+   * @param {String} value Current value of searchbar to be stored
+   */
+  const updateSearchValue = (value) => {
+    setSearchValue(value);
+  };
+
+  /**
+   * @description Creates a new bot for the current userId
+   */
+  const initiateRobotCreation = () => {
+    const robotName = 'New Robot';
+    createNewRobot(userId, robotName)
+      .then((response) => response.json())
+      .then((newRobot) => {
+        const newRobotList = [newRobot, ...robotList];
+        setRobotList([]);
+        setRobotList(newRobotList);
+        retrieveBotList(userId);
+      })
+      .catch((error) => {
+        console.error(error);
+      });
+  };
+
+  /**
+   * @description Creates all boxes for the robots from the database
+   * @returns All Boxes that match the current searchValue as React component
+   * @param {String} currentSearchValue Currently stored value of the search bar, by which the boxes to be displayed are selected
+   */
+  const createRobotBoxes = (currentSearchValue) => {
+    const filteredBotList = Object.values(robotList)
+      .filter((val) => val.robotName !== undefined)
+      .filter((val) =>
+        val.robotName.toUpperCase().includes(currentSearchValue.toUpperCase())
+      );
+
+    return (
+      &lt;>
+        {filteredBotList.map((val) => (
+          &lt;RobotContainer
+            userId={userId}
+            // eslint-disable-next-line no-underscore-dangle
+            robotId={val._id}
+            robotName={val.robotName}
+          />
+        ))}
+      &lt;/>
+    );
   };
 
   return (
     &lt;Layout>
-      &lt;HeaderNavbar selectedKey={3} />
-      &lt;Row justify='center' width='100%'>
-        &lt;Col xs={24} sm={24} md={20}>
-          &lt;Space
-            direction='vertical'
-            size='middle'
-            style={{ padding: '1rem', width: '100%' }}
+      &lt;HeaderNavbar selectedKey={1} />
+
+      &lt;Space style={{ padding: '1rem' }} direction='vertical' size='middle'>
+        &lt;div
+          style={{
+            display: 'flex',
+            flexDirection: 'row',
+          }}
+        >
+          &lt;Search
+            style={{
+              marginRight: '16px',
+            }}
+            placeholder='Search your Robot'
+            onSearch={updateSearchValue}
+            enterButton
+          />
+          &lt;Select
+            onChange={changeUserId}
+            defaultValue='80625d115100a2ee8d8e695b'
           >
-            &lt;Button
-              type='primary'
-              onClick={onSaveToCloud}
-              style={{ width: '100%' }}
-            >
-              Save changes to cloud
-            &lt;/Button>
-            &lt;Editor
-              value={code}
-              onValueChange={(newCode) => setCode(newCode)}
-              highlight={(highlightCode) =>
-                highlight(highlightCode, languages.robotframework)
-              }
-              padding='1rem'
-              className={styles.editor}
-              tabsize={4}
-            />
-          &lt;/Space>
-        &lt;/Col>
-      &lt;/Row>
+            &lt;Option key='user1' value='80625d115100a2ee8d8e695b'>
+              Lukas
+            &lt;/Option>
+            &lt;Option key='user2' value='365889fcf871cfe88711b630'>
+              Erik
+            &lt;/Option>
+            &lt;Option key='user3' value='225aa14130f2c07789cfa38e'>
+              Sandro
+            &lt;/Option>
+            &lt;Option key='user4' value='afdb3d839ca02a106750a2a0'>
+              Daniel
+            &lt;/Option>
+          &lt;/Select>
+        &lt;/div>
+
+        &lt;Row gutter={[16, 16]}>
+          &lt;CreateRobotContainer createNewRobot={initiateRobotCreation} />
+          {createRobotBoxes(searchValue)}
+        &lt;/Row>
+      &lt;/Space>
     &lt;/Layout>
   );
 };
-
-export default RobotFile;
+export default RobotOverview;
 </code></pre>
         </article>
     </section>
